[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "docket-intelligence-workbench"
version = "0.1.0"
description = "Court docket monitoring, immutable snapshots, change detection, and source-grounded analysis."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Giorgiy Shepov" }]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
docket-workbench-api = "docket_workbench.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/docket_workbench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
